overflow fix and focus on modal input

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,7 @@ body {
   font-family: 'TT Lakes', sans-serif;
   background-color: $bgColor;
   color: $text;
+  overflow-x: hidden;
 }
 
 .main {
